fix(*) icon-list’s icon alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -68,6 +68,10 @@ body {
       display: inline-block;
       vertical-align: middle;
       margin-right: 0.5rem;
+
+      & > svg {
+        display: block;
+      }
     }
   }
 }
